lab/stages/stage-05-runtime/delete-stage4-runtime-builder.yaml
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runtime-builder
  namespace: stage-04-gitops
